[package]
name = "trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ahash = "0.7.6"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = {version = "1.18", features = ["macros", "rt-multi-thread"] }
